# desktop-tools

./: .gitignore  .npmrc  .prettierrc.json  README.md  electron-builder.json5  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/: env.d.ts
apps/full-viewport/: index.html
apps/full-viewport/src/: App.vue  main.scss  main.ts
apps/main-viewport-only/: index.html
apps/main-viewport-only/src/: App.vue  main.scss  main.ts
apps/pub-src/: main.ts
apps/pub-src/directive/: index.ts
apps/pub-src/hooks/: useDebouncedRef.ts  useDebouncedThrottleRef.ts  useFileDrop.ts  useIpcOn.ts  useMountElement.ts  useWindowEvent.ts
apps/pub-src/i18n/: index.ts
apps/pub-src/style/: index.ts
apps/pub-src/theme/: index.ts
apps/pub-src/types/: invokeResType.d.ts  settings.d.ts
apps/pub-src/utils/: asyncArrayEvery.ts  autoRerun.ts  config.ts  createHash.ts  debounceThrottling.ts  deepEqual.ts  (+8 more)
apps/template/: index.html
electron/main/: main.ts  window.ts
electron/preload/: preload.ts
resources/default/: config.json
resources/languages/: en.json  ja-JP.json  tw.json  zh-CN.json  zh-TW.json  zh.json
src/: main.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  main.rs  utils.rs
src-tauri/src/command/: sysinfo.rs  windows.rs
src/db/: index.ts
types/: command.d.ts  language.d.ts  menu.d.ts  path.d.ts  settings.d.ts  sqlite.d.ts
types/utils/: DeepPartial.d.ts
utils/: singleRun.ts
(+86 files in other folders)
