[package]
name = "desktop-tools"
version = "0.0.1"
description = "练手娱乐小项目桌面工具"
authors = ["xunji"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.2.0"
regex = "1.5"
sysinfo = "0.33.1"
lazy_static = "1.4.0"
window-vibrancy = "0.5.2"
tauri-plugin-os = "2.2.0"
